fixed heading spacing issue when no aside present

--- a/apps/docs/app/layout.css
+++ b/apps/docs/app/layout.css
@@ -29,12 +29,6 @@ main {
     order: 1;
 }
 
-@media screen and (width >= 48rem) {
-    main {
-        padding-block-start: 0;
-    }
-}
-
 @media screen and (width >= 62rem) {
     .hd-container {
         flex-direction: row;
@@ -42,7 +36,6 @@ main {
 
     main {
         order: 1;
-        padding-block-start: var(--hd-space-8);
     }
 }
 
